=== master

* Make Dataset#to_json in json_serializer work with eager_graphed datasets (jeremyevans)

* Cache Dataset#nullify dataset in the null_dataset extension (chanks) (#1456)

* Add datetime_parse_to_time extension, for parsing timestamp strings without offsets using DateTime.parse.to_time (jeremyevans) (#1455)

* Add WHERE NULL filter for Dataset#where calls with no existing filter, no argument, and where the virtual row block returns nil (jeremyevans)

=== 5.3.0 (2017-12-01)

* Add logger to Database instance before making first connection in bin/sequel (jeremyevans)

* Drop support for PostgreSQL <8.1 in Database#indexes (jeremyevans)

* Add synchronize_sql extension, for checking out a connection around SQL generation (KJTsanaktsidis, jeremyevans) (#1451)

* Deprecate Dataset#where calls with no existing filter, no argument, and where the virtual row block returns nil (jeremyevans) (#1454)

* Add DatasetModule#reverse for simpler use of descending orders (jeremyevans)

* Support WITH clauses in subqueries on SQLite, but not in UNION/INTERSECT/EXCEPT (jeremyevans)

* Hoist WITH clauses to INSERT statement level if INSERT subquery uses a CTE on MSSQL (jeremyevans)

* Respect indislive and ignore indcheckxmin index attributes when using Database#indexes on PostgreSQL (jeremyevans)

* Explicitly disallow use of server-side prepared statements when using Dataset#call in the jdbc/postgresql adapter (jeremyevans) (#1448)

* Support common table expressions, window functions, dropping CHECK constraints, and recognizing CURRENT_DATE defaults on MariaDB 10.2+ (jeremyevans)

* Make Database#reset_primary_key_sequence work on PostgreSQL 10+ (jeremyevans)

* Support :connect_sqls Database option for easily issuing sql commands on all new connections (jeremyevans)

* Support :extensions Database option for loading extensions when initializing, useful in connection strings (jeremyevans)
