@@ -1,5 +1,7 @@
 === master
 
+* Make Dataset#to_xml in xml_serializer work with eager_graphed datasets (jeremyevans)
+
 * Make Dataset#to_json in json_serializer work with eager_graphed datasets (jeremyevans)
 
 * Cache Dataset#nullify dataset in the null_dataset extension (chanks) (#1456)
